Add schema-based validation + utilities; update configs and pipeline

--- a/notebook/01_EDA.ipynb
+++ b/notebook/01_EDA.ipynb
@@ -388,6 +388,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "id": "160d0d7a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 13478 entries, 0 to 13477\n",
+      "Data columns (total 7 columns):\n",
+      " #   Column        Non-Null Count  Dtype \n",
+      "---  ------        --------------  ----- \n",
+      " 0   child_ID      13478 non-null  object\n",
+      " 1   age_mo_round  13478 non-null  int64 \n",
+      " 2   child_gender  12938 non-null  object\n",
+      " 3   clip_ID       13478 non-null  object\n",
+      " 4   Answer        13470 non-null  object\n",
+      " 5   corpus        13478 non-null  object\n",
+      " 6   path          13478 non-null  object\n",
+      "dtypes: int64(1), object(6)\n",
+      "memory usage: 737.2+ KB\n",
+      "Full metadata: None\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Print info of datasets\n",
+    "print(\"Full metadata:\", df_full.info())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "id": "09202f88",
    "metadata": {},
