--- a/notebook/01_EDA.ipynb
+++ b/notebook/01_EDA.ipynb
@@ -2,24 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "18ad9d6e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Current working directory: /itf-fi-ml/home/arunps/Projects/VisionInfantNet\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#one level up into project folder\n",
     "import os\n",
     "os.chdir(\"..\")\n",
     "\n",
-    "print(\"Current working directory:\", os.getcwd())"
+    "#print(\"Current working directory:\", os.getcwd())"
    ]
   },
   {
@@ -81,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "554e500d",
    "metadata": {},
    "outputs": [
@@ -206,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "29344180",
    "metadata": {},
    "outputs": [
@@ -530,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "acaf3f95",
    "metadata": {},
    "outputs": [
