PHASE 1: Rename visioninfantnet -> vocalbaby, move to src/ layout, add pyproject.toml (uv), create CLI + API modules

--- a/notebook/01_EDA.ipynb
+++ b/notebook/01_EDA.ipynb
@@ -30,7 +30,7 @@
     "import librosa\n",
     "import librosa.display\n",
     "\n",
-    "from visioninfantnet.constant import training_pipeline\n"
+    "from vocalbaby.constant import training_pipeline\n"
    ]
   },
   {
