--- a/notebook/02__feature_and_model_selection_experiments.ipynb
+++ b/notebook/02__feature_and_model_selection_experiments.ipynb
@@ -73,7 +73,7 @@
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "\n",
-    "from visioninfantnet.utils.ml_utils.metric.classification_metric import get_classification_score\n",
+    "from vocalbaby.utils.ml_utils.metric.classification_metric import get_classification_score\n",
     "# MLflow to DagsHub\n",
     "\n",
     "import dagshub\n",
