--- a/notebook/05_xgboost_hybrid_optuna_classbalancing.ipynb
+++ b/notebook/05_xgboost_hybrid_optuna_classbalancing.ipynb
@@ -96,7 +96,7 @@
     "import mlflow\n",
     "import mlflow.sklearn  \n",
     "\n",
-    "from visioninfantnet.utils.ml_utils.metric.classification_metric import get_classification_score\n",
+    "from vocalbaby.utils.ml_utils.metric.classification_metric import get_classification_score\n",
     "\n",
     "import dagshub\n",
     "dagshub.init(repo_owner=\"arunps12\", repo_name=\"VisionInfantNet\", mlflow=True)\n",
