--- a/notebook/06__xgboost_egemaps_smote_optuna_experiment.ipynb
+++ b/notebook/06__xgboost_egemaps_smote_optuna_experiment.ipynb
@@ -50,7 +50,7 @@
     "from sklearn.preprocessing import LabelEncoder\n",
     "\n",
     "# VisionInfantNet utilities\n",
-    "from visioninfantnet.utils.ml_utils.metric.classification_metric import get_classification_score\n",
+    "from vocalbaby.utils.ml_utils.metric.classification_metric import get_classification_score\n",
     "\n",
     "print(\"Imports completed.\")\n"
    ]
